--- a/frontend-maven-plugin/src/it/example project/package.json
+++ b/frontend-maven-plugin/src/it/example project/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "test": "web-test-runner src/**/*.test.js --node-resolve",
-    "build": "vite build"
+    "build": "vite build",
+    "test2": "pnpm build && pnpm test"
   },
   "devDependencies": {
     "@esm-bundle/chai": "^4.3.4-fix.0",
