--- a/frontend-maven-plugin/src/it/example project/pom.xml
+++ b/frontend-maven-plugin/src/it/example project/pom.xml
@@ -58,6 +58,15 @@
               <arguments>run build</arguments>
             </configuration>
           </execution>
+          <execution>
+            <id>npm run test2</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <configuration>
+              <arguments>run test2</arguments>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
     </plugins>
